[package]
name = "tuntap-rs"
version = "0.1.0"
authors = ["skye347 <s347419313@gmail.com>"]
edition = "2018"

[dependencies]
libc = "0.2"
nix = "0.13"
bytes = "0.4.12"
tokio = "0.1"
lazy_static = "1.3.0"
mio =  "0.6"
futures = "0.1"
# actix = { path="../actix" }

#[target.'cfg(windows)'.dependencies]
#winapi = { version = "0.3", features = ["winuser"] }